--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailwind Project</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <style>
+        .radial-shadow {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 800px;
+            height: 300px;
+            background: radial-gradient(circle, rgba(71, 175, 168, 0.5) 0%, rgba(0, 128, 0, 0) 70%);
+            border-radius: 50%;
+            filter: blur(40px);
+            pointer-events: none;
+        }
+    </style>
 </head>
 <body>
     <div class="w-full bg-slate-950 border-b border-gray-500">
@@ -13,59 +27,230 @@
             <button class="py-2 px-7 bg-linear-to-b from-slate-900 from-60% to-teal-950  border-2 border-teal-500 text-white w-max rounded-2xl text-xl">Let's Start</button>
         </div>
     </div>
-    <div class="w-full h-screen bg-slate-950 flex flex-col justify-end items-center font-sans">
-        <div class="w-2/3 h-1/3  flex flex-col items-center gap-8">
-           <h1 class="text-6xl font-light text-white">Build your <span class="font-normal">Digital Product</span></h1> 
-           <div class="flex justify-between items-center gap-16 h-2/3 ">
-            <div class=" h-full grid grid-cols-1 gap-5">
-                <div class="w-12 h-12 border-2 border-gray-900 rounded-xl flex items-center justify-center">
-                    <img src="./images/icons8-basketball-50.png" alt="" class="w-2/3 h-2/3 object-contain">
+    <div class="w-full h-screen bg-slate-950 flex flex-col justify-end items-center gap-24 font-sans relative">
+        <div class="w-full h-2/3">
+            <div class="w-2/3 h-full mx-auto flex flex-col items-center gap-8">
+                <h1 class="text-6xl font-light text-white">Build your <span class="font-normal">Digital Product</span></h1>
+                <div class="flex justify-between items-center gap-16 h-2/3">
+                    <div class="h-full grid grid-cols-1 gap-5">
+                        <div class="w-12 h-12 border-2 border-gray-900 rounded-xl flex items-center justify-center">
+                            <img src="./images/icons8-basketball-50.png" alt="" class="w-2/3 h-2/3 object-contain">
+                        </div>
+                        <div class="w-12 h-12 border-2 border-gray-900 rounded-xl flex items-center justify-center">
+                            <img src="./images/icons8-behance-32.png" alt="" class="w-2/3 h-2/3 object-contain">
+                        </div>
+                        <div class="w-12 h-12 border-2 border-gray-900 rounded-xl flex items-center justify-center">
+                            <img src="./images/icons8-pinterest-50.png" alt="" class="w-2/3 h-2/3 object-contain">
+                        </div>
+                    </div>
+                    <div class="h-full flex items-center text-gray-400 text-3xl leading-12 text-center">
+                        <div class="h-max">
+                            We provide Product Design, <span class="text-white font-medium">UI/UX Design</span>, <span class="text-white font-medium">Mobile App</span>,
+                            Creative Director, and <span class="text-white font-medium"></span>Development services! Please share your ideas with us
+                            and create a better <span class="text-white font-medium">website/mobile app/dashboard</span> or your digital product!
+                        </div>
+                    </div>
+                    <div class="h-full grid grid-cols-1 gap-5">
+                        <div class="w-12 h-12 border-2 border-gray-900 rounded-xl flex items-center justify-center">
+                            <img src="./images/icons8-whatsapp-50.png" alt="" class="w-2/3 h-2/3 object-contain">
+                        </div>
+                        <div class="w-12 h-12 border-2 border-gray-900 rounded-xl flex items-center justify-center">
+                            <img src="./images/icons8-telegram-50.png" alt="" class="w-2/3 h-2/3 object-contain">
+                        </div>
+                        <div class="w-12 h-12 border-2 border-gray-900 rounded-xl flex items-center justify-center">
+                            <img src="./images/icons8-facebook-50 (1).png" alt="" class="w-2/3 h-2/3 object-contain">
+                        </div>
+                    </div>
                 </div>
-                <div class="w-12 h-12 border-2 border-gray-900 rounded-xl flex items-center justify-center">
-                    <img src="./images/icons8-behance-32.png" alt=""  class="w-2/3 h-2/3 object-contain">
-                </div>
-                <div class="w-12 h-12 border-2 border-gray-900 rounded-xl flex items-center justify-center">
-                    <img src="./images/icons8-pinterest-50.png" alt=""  class="w-2/3 h-2/3 object-contain">
+                <div class="flex gap-5 justify-center">
+                    <button class="text-2xl text-white bg-linear-to-b from-sky-700 rounded-xl to-teal-500 py-3 px-5">Get a meeting schedule</button>
+                    <button class="text-2xl text-white rounded-xl border-2 border-sky-600 py-3 px-5">Get a Free Consultation</button>
                 </div>
             </div>
-            <div class=" h-full text-gray-400 text-4xl leading-12 text-center">
-                <div class="h-max">
-                    We provide Product Design, <span class="text-white font-medium">UI/UX Design</span>, <span class="text-white font-medium">Mobile App</span>, 
-                    Creative Director, and <span class="text-white font-medium"></span>Development services! Please share your ideas with us 
-                and create a better<span class="text-white font-medium"> website/mobile app/dashboard</span> or you digital product!
-                </div>
-            </div>
-            <div class=" h-full grid grid-cols-1 gap-5">
-                <div class="w-12 h-12 border-2 border-gray-900 rounded-xl flex items-center justify-center">
-                    <img src="./images/icons8-whatsapp-50.png" alt=""  class="w-2/3 h-2/3 object-contain">
-                </div>
-                <div class="w-12 h-12 border-2 border-gray-900 rounded-xl flex items-center justify-center">
-                    <img src="./images/icons8-telegram-50.png" alt=""  class="w-2/3 h-2/3 object-contain">
-                </div>
-                <div class="w-12 h-12 border-2 border-gray-900 rounded-xl flex items-center justify-center">
-                    <img src="./images/icons8-facebook-50 (1).png" alt=""  class="w-2/3 h-2/3 object-contain">
-                </div>
-            </div>
-           </div>
-           <div class="flex gap-5 justify-center">
-            <button class="text-2xl text-white bg-linear-to-b from-sky-700 rounded-xl to-teal-500 py-3 px-5">Get a meeting schedule</button>
-            <button class="text-2xl text-white rounded-xl border-2 border-sky-600 py-3 px-5">Get a Free Consultation</button>
-           </div>
         </div>
-        <div class="w-full py-2">
-            <div class="w-9/10 flex justify-between items-center">
-                <p>2024 nexuxlab. All rights reserved.</p>
+        <div class="w-full py-6 border-t-1 border-gray-600">
+            <div class="w-9/10 mx-auto flex justify-between items-center">
+                <p class="font-sans text-xl text-zinc-500">© 2024 nexuxlab. All rights reserved.</p>
                 <div class="flex gap-2 items-center">
                     <div class="w-8 h-8 border-2 border-gray-900 rounded-xl flex items-center justify-center">
-                        <img src="./images/icons8-x-50.png" alt=""  class="w-2/3 h-2/3 object-contain">
+                        <img src="./images/icons8-x-50.png" alt="" class="w-2/3 h-2/3 object-contain">
                     </div>
                     <div class="w-8 h-8 border-2 border-gray-900 rounded-xl flex items-center justify-center">
-                        <img src="./images/icons8-instagram-50.png" alt=""  class="w-2/3 h-2/3 object-contain">
+                        <img src="./images/icons8-instagram-50.png" alt="" class="w-2/3 h-2/3 object-contain">
                     </div>
                     <div class="w-8 h-8 border-2 border-gray-900 rounded-xl flex items-center justify-center">
-                        <img src="./images/icons8-linkedin-24.png" alt=""  class="w-2/3 h-2/3 object-contain">
+                        <img src="./images/icons8-linkedin-24.png" alt="" class="w-2/3 h-2/3 object-contain">
                     </div>
                 </div>
+            </div>
+        </div>
+    
+        <!-- Radial Shadow -->
+        <div class="radial-shadow"></div>
+    </div>
+    <div class="w-full py-12 flex flex-col bg-black items-center gap-6">
+        <div class="w-18 h-18 bg-zinc-700 flex flex-col items-center justify-center rounded-full ">
+            <img src="./images/icons8-like-24.png" alt="">
+            <p class="text-white text-xs font-bold">210</p>
+        </div>
+        <div class="flex flex-col items-center gap-3">
+            <h1 class="text-2xl text-white font-bold">Website Design</h1>
+            <div class="text-zinc-600 font-semibold flex gap-3">
+                <div class="flex gap-1 items-center">
+                    <img src="./images/icons8-like.png" alt="" class="size-5">
+                    <span>210</span>
+                </div>
+                <div class="flex gap-1 items-center">
+                    <img src="./images/icons8-eye-24.png" alt="" class="size-5">
+                    <span>1.1k</span>
+                </div>
+                <div class="flex gap-1 items-center">
+                    <img src="./images/icons8-comment-30.png" alt="" class="size-5">
+                    <span>20</span>  
+                </div>
+            </div>
+        </div>
+        <p class="text-zinc-500 text-xs font-semibold">
+            Published: August 10th 2024
+        </p>
+    </div>
+    <div class="py-8 bg-zinc-800 w-full">
+        <div class="flex gap-2 w-9/10 mx-auto">
+            <div class="w-14 h-14 bg-red-300 rounded-full bg-[url(./images/logo2.png)] bg-center bg-cover"></div>
+            <div class="text-white">
+                <h3 class="text-lg font-bold">NexUx Lab</h3>
+                <button class="px-4 text-sm rounded-full font-semibold bg-blue-500">Follow</button>
+            </div>
+        </div>
+        <div class="w-10/11 mx-auto flex gap-5 mt-12 overflow-x-auto">
+            <div class="w-md flex-none  h-80 bg-red-800 bg-[url(./images/corousel1.png)] rounded-md bg-top bg-cover">
+                <div class="w-full h-full flex justify-between items-end text-white backdrop-blur-xs p-4 opacity-0 hover:opacity-100 cursor-pointer transition duration-600">
+                    <div class="w-2/3 ">
+                        <h1 class="text-xl font-bold">AI Agent - Crypto Token generator website!</h1>
+                        <p>NexUX Lab</p>
+                    </div>
+                    <div class="w-1/3 flex items-end gap-10 ">
+                        <div class="flex gap-2 items-center ">
+                            <img src="./images/like (2).png" alt="" class="w-4 h-4">
+                            <span>245</span>
+                        </div>
+                        <div class="flex gap-2 items-center">
+                            <img src="./images/eye.png" alt="" class="w-4 h-4">
+                            <span>1.8k</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="w-md flex-none h-80 bg-red-800 bg-[url(./images/c2.png)] rounded-md bg-top bg-cover">
+                <div class="w-full h-full flex justify-between items-end text-white backdrop-blur-xs p-4 opacity-0 hover:opacity-100 cursor-pointer transition duration-600">
+                    <div class="w-2/3 ">
+                        <h1 class="text-xl font-bold">AI Agent - Crypto Token generator website!</h1>
+                        <p>NexUX Lab</p>
+                    </div>
+                    <div class="w-1/3 flex items-end gap-10 ">
+                        <div class="flex gap-2 items-center ">
+                            <img src="./images/like (2).png" alt="" class="w-4 h-4">
+                            <span>245</span>
+                        </div>
+                        <div class="flex gap-2 items-center">
+                            <img src="./images/eye.png" alt="" class="w-4 h-4">
+                            <span>1.8k</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="w-md flex-none h-80 bg-red-800 bg-[url(./images/c3.jpg)] rounded-md bg-top bg-cover">
+                <div class="w-full h-full flex justify-between items-end text-white backdrop-blur-xs p-4 opacity-0 hover:opacity-100 cursor-pointer transition duration-600">
+                    <div class="w-2/3 ">
+                        <h1 class="text-xl font-bold">AI Agent - Crypto Token generator website!</h1>
+                        <p>NexUX Lab</p>
+                    </div>
+                    <div class="w-1/3 flex items-end gap-10 ">
+                        <div class="flex gap-2 items-center ">
+                            <img src="./images/like (2).png" alt="" class="w-4 h-4">
+                            <span>245</span>
+                        </div>
+                        <div class="flex gap-2 items-center">
+                            <img src="./images/eye.png" alt="" class="w-4 h-4">
+                            <span>1.8k</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="w-md flex-none h-80 bg-red-800 bg-[url(./images/c4.jpg)] rounded-md bg-top bg-cover">
+                <div class="w-full h-full flex justify-between items-end text-white backdrop-blur-xs p-4 opacity-0 hover:opacity-100 cursor-pointer transition duration-600">
+                    <div class="w-2/3 ">
+                        <h1 class="text-xl font-bold">AI Agent - Crypto Token generator website!</h1>
+                        <p>NexUX Lab</p>
+                    </div>
+                    <div class="w-1/3 flex items-end gap-10 ">
+                        <div class="flex gap-2 items-center ">
+                            <img src="./images/like (2).png" alt="" class="w-4 h-4">
+                            <span>245</span>
+                        </div>
+                        <div class="flex gap-2 items-center">
+                            <img src="./images/eye.png" alt="" class="w-4 h-4">
+                            <span>1.8k</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="w-md flex-none h-80 bg-red-800 bg-[url(./images/c5.jpg)] rounded-md bg-top bg-cover">
+                <div class="w-full h-full flex justify-between items-end text-white backdrop-blur-xs p-4 opacity-0 hover:opacity-100 cursor-pointer transition duration-600">
+                    <div class="w-2/3 ">
+                        <h1 class="text-xl font-bold">AI Agent - Crypto Token generator website!</h1>
+                        <p>NexUX Lab</p>
+                    </div>
+                    <div class="w-1/3 flex items-end gap-10 ">
+                        <div class="flex gap-2 items-center ">
+                            <img src="./images/like (2).png" alt="" class="w-4 h-4">
+                            <span>245</span>
+                        </div>
+                        <div class="flex gap-2 items-center">
+                            <img src="./images/eye.png" alt="" class="w-4 h-4">
+                            <span>1.8k</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-full flex items-center p-8 justify-center bg-teal-50">
+        <div class="w-8/10  grid grid-cols-3 gap-5 grid-rows-5">
+            <div class="row-span-5 col-span-2 ">
+                dfsd
+            </div>
+            <div class="flex flex-col gap-3 bg-white border border-zinc-200 rounded p-8">
+                <p class="text-xs text-gray-600 font-bold">OWNER</p>
+                <div class="flex gap-1">
+                    <img src="./images/logo2.png" alt="" class="size-12 rounded-full">
+                    <div >
+                        <h3 class="text-lg font-semibold">NexUX Lab</h3>
+                        <p class="text-xs">San Fransisco, CA, USA</p>
+                    </div>
+                </div>
+                <button class="py-2  bg-blue-700 text-white rounded-full">Follow</button>
+                <button class="py-2  bg-blue-50 text-blue-700 rounded-full"> Hire</button>
+            </div>
+            <div class="flex flex-col gap-3 h-3/4 bg-white border border-zinc-200 rounded p-8">
+                    <h1 class="text-2xl text-black font-bold">Website Design</h1>
+                    <div class="text-zinc-600 font-semibold flex gap-3">
+                        <div class="flex gap-1 items-center">
+                            <img src="./images/icons8-like.png" alt="" class="size-5">
+                            <span>210</span>
+                        </div>
+                        <div class="flex gap-1 items-center">
+                            <img src="./images/icons8-eye-24.png" alt="" class="size-5">
+                            <span>1.1k</span>
+                        </div>
+                        <div class="flex gap-1 items-center">
+                            <img src="./images/icons8-comment-30.png" alt="" class="size-5">
+                            <span>20</span>  
+                        </div>
+                    </div>
+                    <p class="text-zinc-500 text-xs font-semibold">
+                        Published: August 10th 2024
+                    </p>
             </div>
         </div>
     </div>
